Fix various responsiveness error in Projects, WBS and Task page: align buttons in Projects header page, align back button and title in WBS list page, fix gap in WBS list table, make task table scrollable and all information visible

--- a/src/components/Projects/Overview/Overview.css
+++ b/src/components/Projects/Overview/Overview.css
@@ -7,7 +7,7 @@
     border-radius: 8px;
     height: 40px;
     width: 300px;
-    margin: 10px;
+    /* margin: 10px; */
     padding: 10px;
   }
   
@@ -20,7 +20,7 @@
     border-radius: 8px;
     height: 40px;
     width: 300px;
-    margin: 10px;
+    /* margin: 10px; */
     padding: 10px;
   }
 
